# fp2022

.github/workflows/: PR.yml
OCamlPrintfDenisov/: OCamlPrintfDenisov.opam  README.md  REPL.ml  dune  dune-project
OCamlPrintfDenisov/demos/: demo.ml  demo.t  dune
OCamlPrintfDenisov/lib/: ast.ml  dune  inferencer.ml  interpreter.ml  parser.ml
OcamlObj/demos/: dune  interprettest.ml  interprettest.t
OcamlObj/lib/: ast.ml  dune  interpret.ml  parser.ml  parsertest.ml
SML/: README.md  SML.opam  dune-project
SML/demos/: dune  interpreter_test.ml  interpreter_test.t
SML/lib/: ast.ml  ast.mli  dune  inferencer.ml  inferencer.mli  interpreter.ml  interpreter.mli  parser.ml  parser.mli  parser_test.ml  parser_test.mli  typing.ml  typing.mli
